<resources>
    <string name="app_name">Chill Chat</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter your age</string>
    <string name="bio_hint">Enter a bio</string>
    <string name="registered">Registered since...</string>
    <string name="registeredDate">11/15/2020</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chill Chat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chat_home">Chat</string>
    <string name="profile_home">Profile</string>
    <string name="logout_home">Logout</string>
    <string name="aboutUs">About</string>
    <string name="grouplist">Group</string>
    <string name="groupslist">Groups</string>
    <string name="about_us">Chill Chat is a social communication application that connects random people into group chats where they have the option to skip groups until they find
        one that interests them. Users can decide whether they want to stay anonymous or create an account. </string>
    <string name="instructions">Below are the instructions for how to use Chill Chat: \n
        1) To send a message click on the text box on the chat screen, type, and then press send. \n
        2) To go to a new group, press the two arrows in the top right. \n
        3) To navigate around the application, use the menu in the top left and click on desired option. \n
        4) To view a users profile, click on their message on the chat screen. \n
        5) To change your profile information, go to the profile and fill in the text boxes, then click the pencil icon. \n
        6) To change your profile picture, go to the profile and click on the image. Select a photo smaller than 1MB, then click on the pencil icon.</string>
    <string name="authors">Brian Chan, Christine Au-yeung, Michael Tran, \n Ryan Polkiewicz, Sathusan Kandasamy</string>
    <string name="version">Version 1.5 - January 26, 2021</string>
    <string name="anonymous">Anonymous</string>
    <string name="TOS">Welcome to Chill Chat!
\nThese terms and conditions outline the rules and regulations for the use of Chill Chat.
\nBy using this app we assume you accept these terms and conditions. Do not continue to use Chill Chat if you do not agree to take all of the terms and conditions stated on this page.
\nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same. Our Terms and Conditions were created with the help of the App Terms and Conditions Generator from App-Privacy-Policy.com
\nLicense
\nUnless otherwise stated, Chill Chat and/or its licensors own the intellectual property rights for all material on Chill Chat. All intellectual property rights are reserved. You may access this from Chill Chat for your own personal use subjected to restrictions set in these terms and conditions.
\nYou must not:
\nRepublish material from Chill Chat
\nSell, rent or sub-license material from Chill Chat
\nReproduce, duplicate or copy material from Chill Chat
\nRedistribute content from Chill Chat
\nThis Agreement shall begin on the date hereof.
\nParts of this app offer an opportunity for users to post and exchange opinions and information in certain areas of the website. Chill Chat does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of Chill Chat, its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, Chill Chat shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.
\nChill Chat reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.
\nYou warrant and represent that:
\nYou are entitled to post the Comments on our App and have all necessary licenses and consents to do so;
\nThe Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;
\nThe Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy
\nThe Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.
\nYou hereby grant Chill Chat a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.
\nHyperlinking to our App
\nThe following organizations may link to our App without prior written approval:
\nGovernment agencies;
\nSearch engines;
\nNews organizations;
\nOnline directory distributors may link to our App in the same manner as they hyperlink to the Websites of other listed businesses; and
\nSystem wide Accredited Businesses except soliciting non-profit organizations, charity shopping malls, and charity fundraising groups which may not hyperlink to our Web site.
\nThese organizations may link to our home page, to publications or to other App information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products and/or services; and (c) fits within the context of the linking party’s site.
\nWe may consider and approve other link requests from the following types of organizations:
\ncommonly-known consumer and/or business information sources;
\ndot.com community sites;
\nassociations or other groups representing charities;
\nonline directory distributors;
\ninternet portals;
\naccounting, law and consulting firms; and
\neducational institutions and trade associations.
\nWe will approve link requests from these organizations if we decide that: (a) the link would not make us look unfavorably to ourselves or to our accredited businesses; (b) the organization does not have any negative records with us; (c) the benefit to us from the visibility of the hyperlink compensates the absence of Chill Chat; and (d) the link is in the context of general resource information.
\nThese organizations may link to our App so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products or services; and (c) fits within the context of the linking party’s site.
\nIf you are one of the organizations listed in paragraph 2 above and are interested in linking to our App, you must inform us by sending an e-mail to Chill Chat. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our App, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response.
\nApproved organizations may hyperlink to our App as follows:
\nBy use of our corporate name; or
\nBy use of the uniform resource locator being linked to; or
\nBy use of any other description of our App being linked to that makes sense within the context and format of content on the linking party’s site.
\nNo use of Chill Chat\'s logo or other artwork will be allowed for linking absent a trademark license agreement.
\niFrames
\nWithout prior approval and written permission, you may not create frames around our Webpages that alter in any way the visual presentation or appearance of our App.
\nContent Liability
\nWe shall not be hold responsible for any content that appears on your App. You agree to protect and defend us against all claims that is rising on our App. No link(s) should appear on any Website that may be interpreted as libelous, obscene or criminal, or which infringes, otherwise violates, or advocates the infringement or other violation of, any third party rights.
\nYour Privacy
\nPlease read Privacy Policy.
\nReservation of Rights
\nWe reserve the right to request that you remove all links or any particular link to our App. You approve to immediately remove all links to our App upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our App, you agree to be bound to and follow these linking terms and conditions.
\nRemoval of links from our App
\nIf you find any link on our App that is offensive for any reason, you are free to contact and inform us any moment. We will consider requests to remove links but we are not obligated to or so or to respond to you directly.
\nWe do not ensure that the information on this website is correct, we do not warrant its completeness or accuracy; nor do we promise to ensure that the website remains available or that the material on the website is kept up to date.
\nDisclaimer
\nTo the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our App and the use of this website. Nothing in this disclaimer will:
\nlimit or exclude our or your liability for death or personal injury;
\nlimit or exclude our or your liability for fraud or fraudulent misrepresentation;
\nlimit any of our or your liabilities in any way that is not permitted under applicable law; or
\nexclude any of our or your liabilities that may not be excluded under applicable law.
\nThe limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.
\nAs long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.
</string>
</resources>