<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat_home" />

        <item
            android:id="@+id/nav_groupList"
            android:icon="@drawable/ic_group"
            android:title="@string/grouplist" />

        <item
            android:id="@+id/nav_groupsList"
            android:icon="@drawable/ic_next"
            android:title="@string/groupslist" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_home" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/aboutUs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_home" />
    </group>
</menu>