<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ChillChat.ChillChat.ChatFragment"
        android:label="@string/chat_home"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_groupList"
        android:name="com.ChillChat.ChillChat.GroupListFragment"
        android:label="@string/grouplist"
        tools:layout="@layout/fragment_grouplist" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ChillChat.ChillChat.ProfileFragment"
        android:label="@string/profile_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.ChillChat.ChillChat.AboutFragment"
        android:label="@string/aboutUs"
        tools:layout="@layout/fragment_about" />

</navigation>