<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePageActivity">

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editButton" />

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="137dp"
        android:layout_height="118dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:srcCompat="@color/colorPrimary" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name_hint"
        app:layout_constraintStart_toEndOf="@+id/nameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureImageView" />

    <EditText
        android:id="@+id/ageLabelEditText"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/age_hint"
        app:layout_constraintStart_toEndOf="@+id/ageLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureImageView" />

    <TextView
        android:id="@+id/ageLabelTextView"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/age"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView" />

    <EditText
        android:id="@+id/bioEditText"
        android:layout_width="335dp"
        android:layout_height="161dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/bio_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageLabelEditText" />

    <TextView
        android:id="@+id/registeredDateLabelTextView"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/registeredDate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bioEditText"
        app:layout_constraintStart_toEndOf="@+id/registeredLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/bioEditText" />

    <TextView
        android:id="@+id/registeredLabelTextView"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/registered"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bioEditText"
        app:layout_constraintTop_toBottomOf="@+id/bioEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>